# simple-web-service

./: README.md  conftest.py  db.sqlite3  pyproject.toml
config/: settings.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_rename_product_version.py
products/tests/: factories.py  test_model.py
